<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mistakes">Fehler</string>
    <string name="mark">Note</string>
    <string name="points">Punkte</string>
    <string name="view">Ansicht</string>
    <string name="countMistakes">Anzahl der Fehler</string>
    <string name="countPoints">Anzahl der Punkte</string>
    <string name="maxMistakes">Maximale Fehleranzahl</string>
    <string name="maxPoints">Maximale Punktzahl</string>
    <string name="tenthPoints">zehntel Noten</string>
    <string name="quarterMarks">viertel Noten</string>
    <string name="halfPoints">halbe Punkte</string>
    <string name="dictatMode">Diktat-Modus</string>
    <string name="settings">Einstellungen</string>
    <string name="back">Zurück</string>
    <string name="save">Speichern</string>
    <string name="search">Suche</string>
    <string name="close">Beenden</string>
    <string name="okay">OKAY</string>

    <string name="expTitle">NotPunktList - Export</string>
    <string name="expFilePart">export</string>
    <string name="expXMLRoot">notpunktlistexport</string>
    <string name="expXMLList">liste</string>
    <string name="expXMLElem">element</string>
    <string name="expXMLMistakes">fehler</string>
    <string name="expXMLPoints">punkte</string>
    <string name="expXMLMark">noten</string>

    <string name="infoSettingsSaved">Einstellungen wurden gespeichert!</string>
    <string name="infoOptionsSaved">Optionen wurden gespeichert!</string>
    <string name="infoExportSuccessfully">Notenliste wurde erfolgreich exportiert!</string>

    <string name="errorProblemsWithSettings">Es gab Probleme beim Laden der Einstellungen!</string>
    <string name="errorNumberTooBig">Die Zahl ist zu groß!</string>
    <string name="errorSomethingWentWrong">Es ist etwas schief gelaufen!</string>
    <string name="errorSearchFailed">Die Suchangabe ist fehlerhaft!</string>
    <string name="errorCantCreateFolders">Verzeichnis konnte nicht erstellt werden!</string>
    <string name="errorCantCreateFile">Datei konnte nicht erstellt werden!</string>
    <string name="errorPathDontExist">Pfad existiert nicht!</string>
    <string name="errorNoBackgroundChosen">Sie haben noch keinen Hintergrund ausgewählt!</string>

    <string name="prefMaxPoints">maxPoints</string>
    <string name="prefMarkListMode">marklistMode</string>
    <string name="prefMarkMode">markMode</string>
    <string name="prefPointMode">pointMode</string>
    <string name="prefViewMode">viewMode</string>
    <string name="prefDictMode">dictMode</string>
    <string name="prefBestAt">bestAt</string>
    <string name="prefWorstAt">worstAt</string>
    <string name="prefCustomMark">customMark</string>
    <string name="prefCustomPoint">customPoint</string>
    <string name="prefCTRLCenter">controlCenter</string>
    <string name="prefPath">path</string>
    <string name="prefBackground">background</string>
    <string name="prefHeader">header</string>

    <string name="sysTitle">NotPunktList</string>
    <string name="sysCharset">UTF-8</string>
    <string name="sysSharedPref">NOTPUNKTLIST</string>
    <string name="sysSplitChar">;</string>
    <string name="sysEquals">entspricht</string>
    <string name="sysEquals2">entsprechen</string>
    <string name="sysDown">runter</string>

    <string name="actMainDefaultValue">20</string>
    <string name="actMainExpand">Einstellungen anzeigen</string>
    <string name="actMainSaveSettings">Einstellungen speichern</string>
    <string name="actMainSearchButtonDescription">Search-Button</string>
    <string name="actMainSearchAfter">Suche nach:</string>
    <string name="actMainExportList">Liste Exportieren</string>

    <string name="actExportTitle">Notenliste exportieren</string>
    <string name="actExportExport">Exportieren</string>
    <string name="actExportToText">in Textdatei exportieren</string>
    <string name="actExportToCSV">in CSV exportieren</string>
    <string name="actExportToXML">in XML exportieren</string>

    <string name="actSettingsTitle">Optionen</string>
    <string name="actSettingsCurrent">aktuelle Farbe</string>
    <string name="actSettingsSavePath">Pfad speichern</string>
    <string name="actSettingsPathToExport">Pfad zum Export-Verzeichnis</string>

    <string name="widMainTitle">NotPunktList - Widget</string>
    <string name="widDetailedTitle">NotPunktList - Detailliert</string>
    <string name="expanded">erweiterte Einstellungen</string>
    <string name="mode">Modus</string>
    <string name="bestAt">Beste Note ab</string>
    <string name="worstAt">Schlechteste Note ab</string>
    <string name="userpoints">userpoint</string>
    <string name="usermark">usermark</string>

    <string-array name="marksMultiplier">
        <item>zehntel Noten</item>
        <item>viertel Noten</item>
        <item>ganze Noten</item>
        <item>benannte Noten</item>
        <item>Abiturpunkte</item>
    </string-array>

    <string-array name="pointsMultiplier">
        <item>viertel Punkte</item>
        <item>halbe Punkte</item>
        <item>ganze Punkte</item>
    </string-array>

    <string-array name="view">
        <item>beste Note zuerst</item>
        <item>schlechteste Note zuerst</item>
        <item>maximale Punktanzahl zuerst</item>
        <item>minimale Punktanzahl zuerst</item>
    </string-array>

    <string-array name="mode">
        <item>lineare Notenliste</item>
        <item>exponentielle Notenliste</item>
        <item>Notenliste mit Knicks</item>
        <item>Notenliste nach IHK</item>
        <item>Notenliste mit Punkte</item>
    </string-array>
</resources>
