<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:background="@drawable/background_bmp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*"
        android:shrinkColumns="*">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="25dp">
            <TextView
                android:layout_span="40"
                android:text="@string/expanded"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="25dp">
            <TextView
                android:layout_span="10"
                android:text="@string/mode"
                android:layout_gravity="center"
                android:gravity="center"/>
            <Spinner
                android:layout_span="30"
                android:id="@+id/spMode"
                android:entries="@array/mode">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="200dp">
            <RelativeLayout
                android:layout_height="200dp"
                android:layout_span="40"
                android:id="@+id/rlDiagram">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/rlCurrentLine">
                </RelativeLayout>
            </RelativeLayout>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_span="15"
                android:text="@string/bestAt"
                android:layout_gravity="center"
                android:gravity="center"/>
            <SeekBar
                android:layout_span="20"
                android:id="@+id/sbBestMark"
                android:layout_width="fill_parent"/>
            <TextView
                android:layout_span="5"
                android:id="@+id/lblCurrentBestMark"
                android:layout_width="fill_parent"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_span="15"
                android:text="@string/worstAt"
                android:layout_gravity="center"
                android:gravity="center"/>
            <SeekBar
                android:layout_span="20"
                android:id="@+id/sbWorst"
                android:layout_width="fill_parent"/>
            <TextView
                android:layout_span="5"
                android:id="@+id/lblCurrentWorstMark"
                android:layout_width="fill_parent"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_span="10"
                android:text="@string/mark"
                android:layout_gravity="center"
                android:gravity="center"/>
            <EditText
                android:layout_span="10"
                android:id="@+id/txtCurMark"
                android:inputType="text"/>
            <TextView
                android:layout_span="10"
                android:text="@string/points"
                android:id="@+id/lblCurPoints"
                android:layout_gravity="center"
                android:gravity="center"/>
            <EditText
                android:layout_span="10"
                android:id="@+id/txtCurPoints"
                android:inputType="text"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
