<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dominicjoas.dev.notpunktlist.activities.actSettings">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:shrinkColumns="*">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/lvBoxes"
                    android:layout_span="32"/>

                <ImageButton
                    android:contentDescription="@string/actSettingsCurrent"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/cmdBackgrounds"
                    android:layout_span="8"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <GridView
                    android:layout_width="wrap_content"
                    android:layout_height="400dp"
                    android:id="@+id/grdBackgrounds"
                    android:layout_span="40"
                    android:numColumns="5"
                    tools:ignore="NestedScrolling" />
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/cmdSave"
                    android:layout_span="40"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actSettingsPathToExport"
                    android:id="@+id/lblPathToExport"
                    android:layout_span="40" />
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <EditText
                    android:inputType="text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPath"
                    android:layout_span="40"
                    android:singleLine="true"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actSettingsSavePath"
                    android:id="@+id/cmdSavePath"
                    android:layout_span="40"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:id="@+id/cmdBack"
                    android:layout_span="40"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
